fixed alignment

--- a/src/components/KeywordExplorerButton/styles.scss
+++ b/src/components/KeywordExplorerButton/styles.scss
@@ -4,14 +4,13 @@
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  left: -1px;
   height: 36px;
   width: 100px;
   border: 1px solid $Gray160;
   overflow: hidden;
   background: $LightGray;
   margin-bottom: 12px;
-  bottom: 5px;
+  bottom: 14px;
 
   .buttonText { 
     width: 100%; 
